--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "vuepress": "2.0.0-rc.15",
     "vuepress-plugin-components": "2.0.0-rc.54",
     "vuepress-plugin-md-enhance": "2.0.0-rc.54",
+    "vuepress-plugin-search-pro": "^2.0.0-rc.54",
     "vuepress-shared": "2.0.0-rc.54",
     "vuepress-theme-hope": "2.0.0-rc.56"
   }
