--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@vuepress/plugin-feed": "2.0.0-rc.47",
     "@vuepress/plugin-revealjs": "2.0.0-rc.48",
     "@vueuse/core": "11.1.0",
+    "@waline/client": "^3.3.2",
     "artplayer": "5.1.7",
     "echarts-wordcloud": "2.1.0",
     "flowchart.ts": "3.0.1",
