--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "artplayer": "5.1.7",
     "echarts-wordcloud": "2.1.0",
     "flowchart.ts": "3.0.1",
-    "katex": "0.16.11",
+    "katex": "^0.16.11",
     "kotlin-playground": "1.30.0",
     "markmap-lib": "0.17.0",
     "markmap-toolbar": "0.17.0",
